<resources>
    <string name="app_name">Layout</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logoDesc">Logo Android</string>
    <string name="title_activity_alfa">AlfaActivity</string>
    <string name="txtNombreHint">Nombre de usuario</string>
    <string name="ok">Aceptar</string>
    <string name="title_activity_beta">BetaActivity</string>
    <string name="title_activity_gamma">GammaActivity</string>
    <string name="title_activity_iota">IotaActivity</string>
    <string name="chkOpcion">Opción checkbox</string>
    <string name="lblOpciones">Opciones radiobutton</string>
    <string name="opcion1">Opción 1</string>
    <string name="opcion2">Opción 2</string>
    <string name="btnOpciones">Next</string>
    <string name="title_activity_parent">ParentActivity</string>
    <string name="alfa">Alfa</string>
    <string name="beta">Beta</string>
    <string name="gamma">Gamma</string>
    <string name="iota">Iota</string>
</resources>
