<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pmdm.layout.GammaActivity">

    <CheckBox android:id="@+id/ChkOpcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkOpcion"
        android:checked="false"/>

    <TextView android:id="@+id/LblOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ChkOpcion"
        android:text="@string/lblOpciones"/>

    <RadioGroup android:id="@+id/RGrOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LblOpciones">
        <RadioButton android:id="@+id/Radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion1"/>
        <RadioButton android:id="@+id/Radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion2"/>
    </RadioGroup>

    <Button android:id="@+id/BtnOpciones"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RGrOpciones"
        android:layout_alignRight="@id/RGrOpciones"
        android:text="@string/btnOpciones"/>

</RelativeLayout>
